--- a/frontend/src/app/home/components/introduction/styles.module.css
+++ b/frontend/src/app/home/components/introduction/styles.module.css
@@ -3,7 +3,7 @@
 .container {
     width: 100%;
     min-height: 900px;
-    background-color: #f5ebe0;
+    background-color: #f3d4ce;
 }
 
 .title {
@@ -27,13 +27,19 @@
     font-family: "Shippori Mincho", serif;
     font-weight: 400;
     font-style: normal;
-    margin: 10px;
-    padding: 10px;
+    /* margin: 10px;
+    padding: 10px; */
+    padding-left: 10px;
+    padding-right: 10px;
+    /* color: firebrick; */
+    white-space: break-spaces;
     text-align-last: center;
+    margin-bottom: 10px;
 }
 
 .slider {
-    width: 80%;
+    width: 100%;
+    /* height: 100%; */
 }
 .slider div {
     background-position: center;
